--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>My Work</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
-    <link rel="stylesheet" href="styles.css" />
-  </head>
+    <head>
+        <title>My Work</title>
+        <link
+            rel="stylesheet"
+            href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+        />
+        <link
+            rel="stylesheet"
+            href="https://fonts.googleapis.com/icon?family=Material+Icons"
+        />
+        <link rel="stylesheet" href="styles.css" />
+        <link rel="manifest" href="/manifest.json" />
+        <link rel="apple-touch-icon" href="/work-192.png" />
+        <meta name="theme-color" content="#fff" />
+    </head>
 
-  <body>
-    <div id="root"></div>
-    <script src="../src/index.js" type="text/jsx"></script>
-  </body>
+    <body>
+        <div id="root"></div>
+        <script src="../src/index.js" type="text/jsx"></script>
+    </body>
 </html>
