--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
         <link rel="manifest" href="/manifest.json" />
         <link rel="apple-touch-icon" href="/work-192.png" />
         <meta name="theme-color" content="#fff" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
     </head>
 
     <body>
